--- a/css/resume.css
+++ b/css/resume.css
@@ -58,7 +58,11 @@ h2 {
 .list-icons .list-inline-item i:hover {
   color: #379392;
 }
-
+#cv-img{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 0.8em;
+	font-weight: 600;
+}
 #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 600;
   text-transform: uppercase;
@@ -119,7 +123,7 @@ section.resume-section .resume-item .resume-date {
     min-height: 100vh;
   }
   section.resume-section .resume-item .resume-date {
-    min-width: 18rem;
+    min-width: 10rem;
   }
 }
 
@@ -168,39 +172,31 @@ a:hover, a:focus, a:active {
 	color: rgba(255,255,255);
 }
 
-.csc{
-	min-width: 100px;
-	width: 100%;
-	height: 100px;
-	background-repeat: no-repeat;
-	background-position:center;
-	background-size: contain;
-	background-image : url("../img/autre/csc.png"); 
-}
-
-.teamname{
-	min-width: 300px;
-	width: 100%;
-	height: 200px;
-	background-repeat: no-repeat;
-	background-position:center;
-	background-size: contain;
-	background-image : url("../img/autre/teamname.png"); 
-}
-
-.scoreboard{
-	min-width: 100px;
-	width: 100%;
-	height: 200px;
-	background-repeat: no-repeat;
-	background-position:center;
-	background-size: contain;
-	background-image : url("../img/autre/scoreboard.png"); 
-}
-
-.tableau {
-	
+td, th {
+	padding : 5px; 
 }
 p {
 	text-align : justify; 
 }
+
+
+center {
+	padding : 15px; 
+}
+
+p {
+	font-size : 1.2em; 
+}
+
+.hour_table {
+	border : solid black 1px; 
+	border-collapse : collapse; 
+	border-color : gray; 
+	padding : 10px; 
+}
+
+.resume {
+	padding : 10px; 
+}
+
+
